MINOR: Fix/globals (#282)
* add smartview icon

* add bimdata-scrollbar class

* fix icons page style

--- a/src/web/views/Components/Icons/_Icons.scss
+++ b/src/web/views/Components/Icons/_Icons.scss
@@ -7,8 +7,8 @@
     margin: 0 0 var(--spacing-unit);
   }
   .bimdata-ds__demo {
-    ::v-deep.bimdata-ds__demo__module {
-      padding-top: 38px;
+    ::v-deep .bimdata-ds__demo__module {
+      align-items: flex-start;
       justify-content: flex-start;
     }
     &__module {
@@ -34,11 +34,11 @@
         margin-top: 24px;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: flex-start;
         & > div {
-          // margin: 3px;
           padding: var(--spacing-unit);
           flex: 14%;
+          flex-grow: 0;
           display: flex;
           flex-direction: column;
           align-items: center;
